--- a/src/RepositoryPattern/RepositoryPattern.csproj
+++ b/src/RepositoryPattern/RepositoryPattern.csproj
@@ -1,14 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Authors>Alessandro Rapiti</Authors>
+		<Company>Alessandro Rapiti</Company>
+		<Product>Repository Pattern</Product>
+		<Description>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="System.Collections" Version="4.3.0" />
-  </ItemGroup>
+		</Description>
+		<Copyright>2022</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>repositorypattern.png</PackageIcon>
+		<RepositoryUrl>https://github.com/KeyserDSoze/RepositoryPattern</RepositoryUrl>
+		<PackageId>RepositoryPattern</PackageId>
+		<Version>1.0.0</Version>
+	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+		<PackageReference Include="System.Collections" Version="4.3.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="repositorypattern.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
