--- a/src/RepositoryPattern.Test/RepositoryPattern.UnitTest/RepositoryPattern.UnitTest.csproj
+++ b/src/RepositoryPattern.Test/RepositoryPattern.UnitTest/RepositoryPattern.UnitTest.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\RepositoryPattern\RepositoryPattern.csproj" />
+    <ProjectReference Include="..\..\RepositoryPattern\RepositoryPattern.csproj" />
   </ItemGroup>
 
   <ItemGroup>
