--- a/src/RepositoryPattern/RepositoryPattern.csproj
+++ b/src/RepositoryPattern/RepositoryPattern.csproj
@@ -19,6 +19,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Fare" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="System.Collections" Version="4.3.0" />
 	</ItemGroup>
