--- a/src/RepositoryPattern/RepositoryPattern.csproj
+++ b/src/RepositoryPattern/RepositoryPattern.csproj
@@ -23,6 +23,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="System.Collections" Version="4.3.0" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
 	</ItemGroup>
 
 	<ItemGroup>
