--- a/src/RepositoryPattern/RepositoryPattern.csproj
+++ b/src/RepositoryPattern/RepositoryPattern.csproj
@@ -19,12 +19,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Fare" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="System.Collections" Version="4.3.0" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
 	</ItemGroup>
+	
 
 	<ItemGroup>
 		<None Include="repositorypattern.png">
